# monochange

./: .devcontainer.json  .dockerignore  .envrc  .gitignore  .oxfmtrc.json  .oxlintrc.json  .taplo.toml  1  AGENTS.md  ARCHITECTURE.md  ASYNC_MIGRATION_PROGRESS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  RUST_IMPROVEMENTS.md  changelog.md  clippy.toml  codecov.yml  context.md  deny.toml  devenv.nix  devenv.yaml  dprint.json  fix_github.py  fix_paths.sh  fly.toml  mdt.toml  monochange.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  research.md  rust-toolchain.toml  rustfmt.toml  tsconfig.json  tsdown.config.json
apps/monochange_app/: .gitignore  Cargo.toml  DEPLOY.md  README.md  package.json  playwright.config.ts  rust-toolchain.toml  secretspec.toml  tailwind.config.js  tsconfig.json
apps/monochange_app/deploy/: docker-entrypoint.sh
apps/monochange_app/embed/: package.json
crates/mdt/: Cargo.toml
crates/mdt/src/: __fixtures.rs  __tests.rs  error.rs  lexer.rs  lib.rs  parser.rs  patterns.rs  position.rs  tokens.rs
crates/mdt_lsp/: Cargo.toml  readme.md
crates/mdt_lsp/src/: error.rs  lib.rs  main.rs
crates/mdtemplate/: Cargo.toml  readme.md
crates/mdtemplate/src/: lib.rs
crates/monochange/: Cargo.toml  changelog.md  readme.md
crates/monochange/benches/: cli_commands.rs
crates/monochange/src/: __tests.rs  analyze.rs  assist.rs  changelog.rs  changeset_policy.rs  changesets.rs  cli.rs  cli_help.rs  cli_progress.rs  cli_runtime.rs  cli_theme.rs  command_wizard.rs  git_support.rs  hosted_sources.rs  interactive.rs  jq_filter.rs  lib.rs  lint.rs  lint_check_reporter.rs  main.rs  mcp.rs  migrate_knope.rs  migration_audit.rs  monochange.init.toml  monochange.toml.template  package_publish.rs  prepared_release_cache.rs  publish_bootstrap.rs  publish_progress.rs  publish_rate_limits.rs  publish_readiness.rs  release_artifacts.rs  release_branch_policy.rs  release_record.rs  skill.rs  subagents.rs  tracing_setup.rs  trust_capabilities.rs  versioned_files.rs  workspace_ops.rs
crates/monochange/tests/: affected.rs  benchmark_cli_comment.rs  cargo_lockfile_fast_path.rs  changelog_formats.rs  changeset_context.rs  changeset_policy.rs  changeset_provenance.rs  changeset_target_metadata.rs  cli_help.rs  cli_main_binary.rs  cli_output.rs  cli_progress.rs  cli_step_input_overrides.rs  cli_step_when.rs  deployments.rs  github_releases.rs  hosted_release_benchmarks.rs  manifest_formatting.rs  pre_stable_versioning.rs  prepared_release_artifacts.rs  release_apply.rs  release_group_propagation.rs  release_notes_and_propagation.rs  release_pull_requests.rs  release_record.rs  source_providers.rs  telemetry.rs  test_support.rs
crates/monochange_analysis/: Cargo.toml  changelog.md  readme.md
crates/monochange_analysis/src/: extractors.rs  frame.rs  lib.rs
crates/monochange_analysis/tests/: cargo_semantic_analysis.rs
crates/monochange_cargo/: CHANGELOG.md  Cargo.toml  changelog.md  readme.md
crates/monochange_cargo/src/: __tests.rs  analysis.rs  cargo_package.rs  lib.rs
crates/monochange_changelog/: Cargo.toml  changelog.md  readme.md
crates/monochange_changelog/src/: lib.rs
crates/monochange_cli/: Cargo.toml  readme.md
crates/monochange_config/: Cargo.toml  changelog.md  readme.md
crates/monochange_config/src/: __tests.rs  lib.rs  lints.rs  mutant_killers.rs  proptest_config.rs
crates/monochange_core/: CHANGELOG.md  Cargo.toml  changelog.md  readme.md
crates/monochange_core/proptest-regressions/: proptest_bump_severity.txt
crates/monochange_core/src/: __tests.rs  analysis.rs  git.rs  lib.rs  lint.rs  proptest_bump_severity.rs
crates/monochange_core/tests/: mutation_killers.rs  proptest_json_comments.rs
crates/monochange_dart/: Cargo.toml  changelog.md  readme.md
crates/monochange_dart/src/: __tests.rs  analysis.rs  lib.rs
crates/monochange_deno/: Cargo.toml  changelog.md  readme.md
crates/monochange_deno/src/: __tests.rs  analysis.rs  lib.rs
crates/monochange_ecmascript/: Cargo.toml  changelog.md  readme.md
crates/monochange_ecmascript/src/: lib.rs
crates/monochange_gitea/: Cargo.toml  changelog.md  readme.md
crates/monochange_gitea/src/: __tests.rs  lib.rs
crates/monochange_github/: Cargo.toml  changelog.md  readme.md
crates/monochange_github/src/: __tests.rs  lib.rs
crates/monochange_github/tests/: env_wrappers.rs
crates/monochange_gitlab/: Cargo.toml  changelog.md  readme.md
crates/monochange_gitlab/src/: __tests.rs  lib.rs
crates/monochange_go/: Cargo.toml  changelog.md  readme.md
crates/monochange_go/src/: __tests.rs  lib.rs
crates/monochange_graph/: Cargo.toml  changelog.md  readme.md
crates/monochange_graph/src/: __tests.rs  lib.rs  mutant_killers.rs  prop_tests.rs
crates/monochange_hosting/: Cargo.toml  changelog.md  readme.md
crates/monochange_hosting/src/: __tests.rs  lib.rs
crates/monochange_integration_tests/: Cargo.toml
crates/monochange_integration_tests/tests/: discovery_path_filter.rs  forgejo_provider.rs  publish_plan_order.rs  release_record_artifacts.rs  schema_assets.rs  snapshot_readability.rs
crates/monochange_jvm/: Cargo.toml
crates/monochange_jvm/src/: __tests.rs  lib.rs
crates/monochange_lint/: Cargo.toml  changelog.md  readme.md
crates/monochange_lint/src/: cargo.rs  lib.rs  npm.rs  snapshots.rs
crates/monochange_lint_testing/: Cargo.toml  changelog.md  readme.md
crates/monochange_linting/: Cargo.toml  changelog.md  readme.md
crates/monochange_npm/: Cargo.toml  changelog.md  readme.md
crates/monochange_publish/: Cargo.toml  changelog.md  readme.md
crates/monochange_python/: Cargo.toml  changelog.md  readme.md
docs/: Cargo.toml  book.toml  linting-architecture-roadmap.md  telemetry.md
docs/agents/: architecture.md  changeset-generation.md  changeset-quality.md  coding-style.md  documentation.md  github-templates.md  product-rules.md  release-checklist.md  rust-quality.md  testing.md  tooling.md  workflow.md
docs/plans/: README.md  monochange-crate-boundaries-audit.md  tech-debt.md
docs/src/: SUMMARY.md  lib.rs  readme.md
(+1919 files in other folders)
