[workspace]
members = [
	"crates/monochange",
	"crates/monochange_cargo",
	"crates/monochange_config",
	"crates/monochange_core",
	"crates/monochange_dart",
	"crates/monochange_deno",
	"crates/monochange_github",
	"crates/monochange_graph",
	"crates/monochange_npm",
	"crates/monochange_semver",
	"docs",
]
default-members = [
	"crates/monochange",
	"crates/monochange_cargo",
	"crates/monochange_config",
	"crates/monochange_core",
	"crates/monochange_dart",
	"crates/monochange_deno",
	"crates/monochange_graph",
	"crates/monochange_github",
	"crates/monochange_npm",
	"crates/monochange_semver",
	"docs",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
categories = ["development-tools"]
edition = "2021"
homepage = "https://github.com/ifiokjr/monochange"
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
license = "Unlicense"
readme = "readme.md"
repository = "https://github.com/ifiokjr/monochange"
rust-version = "1.86.0"

[workspace.dependencies]
cargo_metadata = "0.15"
clap = { version = "4", features = ["derive"] }
derive_more = "0.99"
doc-comment = "0.3"
glob = "0.3"
insta = { version = "1", features = ["filters", "json"] }
insta-cmd = "0.6"
markdown = "1.0.0-alpha.9"
miette = "7"
rstest = "0.17"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
shlex = "1"
similar-asserts = "1"
thiserror = "1"
toml = "0.8"
typed-builder = "0.14"
walkdir = "2"

# Internal crates
monochange = { path = "./crates/monochange", version = "0.0.0" }
monochange_cargo = { path = "./crates/monochange_cargo", version = "0.0.0" }
monochange_config = { path = "./crates/monochange_config", version = "0.0.0" }
monochange_core = { path = "./crates/monochange_core", version = "0.0.0" }
monochange_dart = { path = "./crates/monochange_dart", version = "0.0.0" }
monochange_deno = { path = "./crates/monochange_deno", version = "0.0.0" }
monochange_github = { path = "./crates/monochange_github", version = "0.0.0" }
monochange_graph = { path = "./crates/monochange_graph", version = "0.0.0" }
monochange_npm = { path = "./crates/monochange_npm", version = "0.0.0" }
monochange_semver = { path = "./crates/monochange_semver", version = "0.0.0" }

[workspace.metadata.bin]
cargo-deny = { version = "0.19.0" }
cargo-insta = { version = "1.46.3" }
cargo-llvm-cov = { version = "0.8.4" }
cargo-nextest = { version = "0.9.129" }
cargo-semver-checks = { version = "0.46.0" }
cargo-workspaces = { version = "0.4.2" }

[workspace.lints.rust]
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
