[workspace]
members = ["crates/*", "docs"]
resolver = "2"

[workspace.package]
version = "0.3.3"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
categories = ["development-tools"]
edition = "2024"
homepage = "https://github.com/monochange/monochange"
license = "Unlicense"
readme = "readme.md"
repository = "https://github.com/monochange/monochange"
rust-version = "1.90.0"

[workspace.dependencies]
anstyle = { version = "1.0", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", default-features = false, features = ["derive"] }
criterion = { version = "0.8.2", default-features = false }
doc-comment = { version = "0.3", default-features = false }
etest = { version = "0.3", default-features = false }
glob = { version = "0.3", default-features = false }
httpmock = { version = "0.8.3", default-features = false }
ignore = { version = "0.4", default-features = false }
inquire = { version = "0.9", default-features = false }
insta = { version = "1", default-features = false, features = ["filters", "json"] }
insta-cmd = { version = "0.6", default-features = false }
miette = { version = "7", default-features = false }
minijinja = { version = "2", default-features = false }
octocrab = { version = "0.50.0", default-features = false, features = ["default-client", "follow-redirect", "jwt-rust-crypto", "retry", "rustls", "rustls-aws-lc-rs", "timeout", "tracing"] }
oxc_allocator = { version = "0.129.0", default-features = false }
oxc_ast = { version = "0.129.0", default-features = false }
oxc_parser = { version = "0.129.0", default-features = false }
oxc_span = { version = "0.129.0", default-features = false }
portable-pty = { version = "0.9", default-features = false }
proptest = { version = "1.6", default-features = false }
quote = { version = "1", default-features = false }
rayon = { version = "1.10", default-features = false }
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
rmcp = { version = "1", default-features = false }
rstest = { version = "0.26.1", default-features = false }
semver = { version = "1", default-features = false, features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
serde_yaml_ng = { version = "0.10", default-features = false }
shlex = { version = "1", default-features = false }
similar = { version = "3.0.0", default-features = false, features = ["inline", "text"] }
similar-asserts = { version = "2.0.0", default-features = false }
syn = { version = "2", default-features = false, features = ["full"] }
temp-env = { version = "0.3", default-features = false }
tempfile = { version = "3", default-features = false }
termimad = { version = "0.34", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread"] }
toml = { version = "1.1.2", default-features = false }
# Pinned: format-preserving edits in Cargo.toml files depend on this version's
# whitespace and comment handling. Bumping requires verifying manifest output.
toml_edit = { version = "0.25.10", default-features = false, features = ["parse"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
typed-builder = { version = "0.23.2", default-features = false }
urlencoding = { version = "2", default-features = false }
walkdir = { version = "2", default-features = false }

# Internal crates
monochange = { version = "0.3.3", path = "./crates/monochange" }
monochange_analysis = { version = "0.3.3", path = "./crates/monochange_analysis" }
monochange_cargo = { version = "0.3.3", path = "./crates/monochange_cargo" }
monochange_config = { version = "0.3.3", path = "./crates/monochange_config" }
monochange_core = { version = "0.3.3", path = "./crates/monochange_core" }
monochange_dart = { version = "0.3.3", path = "./crates/monochange_dart" }
monochange_deno = { version = "0.3.3", path = "./crates/monochange_deno" }
monochange_ecmascript = { version = "0.3.3", path = "./crates/monochange_ecmascript" }
monochange_gitea = { version = "0.3.3", path = "./crates/monochange_gitea" }
monochange_github = { version = "0.3.3", path = "./crates/monochange_github" }
monochange_gitlab = { version = "0.3.3", path = "./crates/monochange_gitlab" }
monochange_go = { version = "0.3.3", path = "./crates/monochange_go" }
monochange_graph = { version = "0.3.3", path = "./crates/monochange_graph" }
monochange_hosting = { version = "0.3.3", path = "./crates/monochange_hosting" }
monochange_lint = { version = "0.3.3", path = "./crates/monochange_lint" }
monochange_lint_testing = { version = "0.3.3", path = "./crates/monochange_lint_testing" }
monochange_linting = { version = "0.3.3", path = "./crates/monochange_linting" }
monochange_npm = { version = "0.3.3", path = "./crates/monochange_npm" }
monochange_python = { version = "0.3.3", path = "./crates/monochange_python" }
monochange_semver = { version = "0.3.3", path = "./crates/monochange_semver" }
monochange_telemetry = { version = "0.3.3", path = "./crates/monochange_telemetry" }
monochange_test_helpers = { version = "0.3.3", path = "./crates/monochange_test_helpers" }

[workspace.metadata.bin]
cargo-deny = { version = "0.19.0" }
cargo-insta = { version = "1.47.2" }
cargo-llvm-cov = { version = "0.8.5" }
cargo-nextest = { version = "0.9.132" }
cargo-semver-checks = { version = "0.47.0" }
cargo-workspaces = { version = "0.4.2" }

[workspace.lints.rust]
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
