[package]
name = "monochange_book"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
doc-comment = { workspace = true }
monochange = { workspace = true }
monochange_cargo = { workspace = true }
monochange_config = { workspace = true }
monochange_core = { workspace = true }
monochange_dart = { workspace = true }
monochange_deno = { workspace = true }
monochange_graph = { workspace = true }
monochange_npm = { workspace = true }
monochange_semver = { workspace = true }
semver = { workspace = true }

[lints]
workspace = true
