[package]
name = "monochange_book"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
description = "Book and documentation for monochange"

[dependencies]
doc-comment = { workspace = true, default-features = true }
monochange = { workspace = true }
monochange_cargo = { workspace = true }
monochange_config = { workspace = true }
monochange_core = { workspace = true }
monochange_dart = { workspace = true }
monochange_deno = { workspace = true }
monochange_github = { workspace = true }
monochange_graph = { workspace = true }
monochange_npm = { workspace = true }
monochange_semver = { workspace = true }
semver = { workspace = true, default-features = true }

[lints]
workspace = true
