[package]
name = "mdt"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/mdt"
edition = { workspace = true }
include = { workspace = true }
keywords = ["markdown", "templates"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "update markdown content anywhere using comments as template tags"

[dependencies]
derive_more = { workspace = true }
doc-comment = { workspace = true }
float-cmp = { workspace = true }
markdown = { workspace = true }
miette = { workspace = true }
nom = { workspace = true }
readonly = { workspace = true }
snailquote = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
similar-asserts = { workspace = true }
