[package]
name = "monochange"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange"
edition = { workspace = true }
include = { workspace = true }
keywords = ["cli", "changelog", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Manage versions and releases for your multiplatform, multilanguage monorepo"

[[bin]]
name = "mc"
path = "src/bin/mc.rs"

[dependencies]
clap = { workspace = true }
glob = { workspace = true }
inquire = { workspace = true }
minijinja = { workspace = true }
monochange_cargo = { workspace = true }
monochange_config = { workspace = true }
monochange_core = { workspace = true }
monochange_dart = { workspace = true }
monochange_deno = { workspace = true }
monochange_gitea = { workspace = true }
monochange_github = { workspace = true }
monochange_gitlab = { workspace = true }
monochange_graph = { workspace = true }
monochange_npm = { workspace = true }
monochange_semver = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io", "macros"] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
toml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
insta-cmd = { workspace = true }
rstest = { workspace = true }
similar-asserts = { workspace = true }
tempfile = "3"

[lints]
workspace = true
