[package]
name = "monochange"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange"
edition = { workspace = true }
include = { workspace = true }
keywords = ["cli", "changelog", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Manage versions and releases for your multiplatform, multilanguage monorepo"

[[bin]]
name = "mc"
path = "src/bin/mc.rs"

[dependencies]
chrono = { workspace = true, default-features = true }
clap = { workspace = true, default-features = true }
glob = { workspace = true, default-features = true }
inquire = { workspace = true, default-features = true }
minijinja = { workspace = true, default-features = true }
monochange_cargo = { workspace = true }
monochange_config = { workspace = true }
monochange_core = { workspace = true }
monochange_dart = { workspace = true }
monochange_deno = { workspace = true }
monochange_gitea = { workspace = true }
monochange_github = { workspace = true }
monochange_gitlab = { workspace = true }
monochange_graph = { workspace = true }
monochange_npm = { workspace = true }
monochange_semver = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io", "macros"], default-features = true }
semver = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
serde_yaml_ng = { workspace = true, default-features = true }
shlex = { workspace = true, default-features = true }
similar = { workspace = true }
tempfile = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"], default-features = true }
toml = { workspace = true, default-features = true }
typed-builder = { workspace = true, default-features = true }

[dev-dependencies]
etest = { workspace = true, default-features = true }
httpmock = { workspace = true, default-features = true }
insta = { workspace = true, default-features = true }
insta-cmd = { workspace = true, default-features = true }
monochange_test_helpers = { version = "0.0.0", path = "../../testing/monochange_test_helpers" }
rstest = { workspace = true, default-features = true }
similar-asserts = { workspace = true, default-features = true }
temp-env = { workspace = true, default-features = true }

[lints]
workspace = true
