[package]
name = "monochange"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange"
edition = { workspace = true }
include = ["src/**/*.rs", "src/**/*.yml", "src/**/*.toml", "Cargo.toml", "readme.md"]
keywords = ["cli", "changelog", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Manage versions and releases for your multiplatform, multilanguage monorepo"

[[bin]]
name = "mc"
path = "src/bin/mc.rs"

[features]
default = ["cargo", "npm", "deno", "dart", "github", "gitlab", "gitea"]
cargo = ["monochange_cargo"]
npm = ["monochange_npm"]
deno = ["monochange_deno"]
dart = ["monochange_dart"]
github = ["monochange_github", "monochange_core/http"]
gitlab = ["monochange_gitlab", "monochange_core/http"]
gitea = ["monochange_gitea", "monochange_core/http"]

[dependencies]
chrono = { workspace = true, default-features = true }
clap = { workspace = true, default-features = true }
glob = { workspace = true, default-features = true }
inquire = { workspace = true, default-features = true }
minijinja = { workspace = true, default-features = true }
monochange_analysis = { workspace = true }
monochange_cargo = { workspace = true, optional = true }
monochange_config = { workspace = true }
monochange_core = { workspace = true }
monochange_dart = { workspace = true, optional = true }
monochange_deno = { workspace = true, optional = true }
monochange_gitea = { workspace = true, optional = true }
monochange_github = { workspace = true, optional = true }
monochange_gitlab = { workspace = true, optional = true }
monochange_graph = { workspace = true }
monochange_lint = { workspace = true }
monochange_npm = { workspace = true, optional = true }
monochange_semver = { workspace = true }
rayon = { workspace = true, default-features = true }
regex = { workspace = true, default-features = true }
reqwest = { workspace = true, default-features = true, features = ["blocking"] }
rmcp = { workspace = true, features = ["server", "transport-io", "macros"], default-features = true }
semver = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
serde_yaml_ng = { workspace = true, default-features = true }
shlex = { workspace = true, default-features = true }
similar = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }
termimad = "0.34"
thiserror = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"], default-features = true }
toml = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, default-features = true }
typed-builder = { workspace = true, default-features = true }
urlencoding = { workspace = true, default-features = true }

[dev-dependencies]
criterion = { workspace = true, default-features = true }
etest = { workspace = true, default-features = true }
httpmock = { workspace = true, default-features = true }
insta = { workspace = true, default-features = true }
insta-cmd = { workspace = true, default-features = true }
monochange_config = { workspace = true }
monochange_test_helpers = { workspace = true }
portable-pty = { workspace = true, default-features = true }
rstest = { workspace = true, default-features = true }
similar-asserts = { workspace = true, default-features = true }
temp-env = { workspace = true, default-features = true }

[[bench]]
name = "cli_commands"
harness = false

[lints]
workspace = true
