[package]
name = "monochange_analysis"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Artifact-aware semantic change analysis for monochange changesets"

[dependencies]
monochange_core = { workspace = true }

serde = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }

[dev-dependencies]
serde_json = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
