[package]
name = "monochange_analysis"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Ecosystem-specific semantic change analysis for monochange changesets"

[features]
default = ["cargo", "npm", "deno", "dart"]
cargo = ["monochange_cargo"]
npm = ["monochange_npm"]
deno = ["monochange_deno"]
dart = ["monochange_dart"]

[dependencies]
monochange_cargo = { workspace = true, optional = true }
monochange_config = { workspace = true }
monochange_core = { workspace = true }
monochange_dart = { workspace = true, optional = true }
monochange_deno = { workspace = true, optional = true }
monochange_npm = { workspace = true, optional = true }

serde = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
walkdir = { workspace = true, default-features = true }

[dev-dependencies]
insta = { workspace = true, default-features = true }
monochange_test_helpers = { workspace = true }
serde_json = { workspace = true, default-features = true }
temp-env = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
