[package]
name = "monochange_cargo"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_cargo"
edition = { workspace = true }
include = { workspace = true }
keywords = ["cli", "changelog", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Manage versions and releases for your multiplatform, multilanguage monorepo"

[dependencies]
glob = { workspace = true }
monochange_core = { workspace = true }
monochange_semver = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
similar-asserts = { workspace = true }
tempfile = "3"

[lints]
workspace = true
